[gd_scene load_steps=41 format=4 uid="uid://bmwnct1ocifl8"]

[ext_resource type="Script" uid="uid://dg5fggxtxlc4" path="res://environments/buildings/bar_minigame/bar_minigame.gd" id="1_mu04h"]
[ext_resource type="ArrayMesh" uid="uid://bf0oe7q2455bx" path="res://environments/models/buildings/tiles/floor.obj" id="1_rkyfd"]
[ext_resource type="ArrayMesh" uid="uid://bci1iwfsx23yx" path="res://environments/models/buildings/tiles/structure.obj" id="2_ufdfm"]
[ext_resource type="ArrayMesh" uid="uid://coj872yf0vtin" path="res://environments/models/buildings/tiles/wall-corner-column-bottom.obj" id="3_cuqvx"]
[ext_resource type="ArrayMesh" uid="uid://buhqm4hmtgmm8" path="res://environments/models/buildings/tiles/wall.obj" id="4_ks6fs"]
[ext_resource type="Texture2D" uid="uid://b685o8krif52j" path="res://environments/models/buildings/tiles/Textures/colormap.png" id="5_upnxa"]
[ext_resource type="ArrayMesh" uid="uid://cgg86i6xsoi3i" path="res://environments/models/forest/decorations/log_stackLarge.obj" id="6_dxs0i"]
[ext_resource type="ArrayMesh" uid="uid://3kqcrhfrx407" path="res://environments/models/buildings/tiles/column-thin.obj" id="7_0nbum"]
[ext_resource type="ArrayMesh" uid="uid://c0qttkt3ee501" path="res://environments/models/food/barrel.obj" id="8_8e5y5"]
[ext_resource type="ArrayMesh" uid="uid://d3sb2sp1f57vm" path="res://environments/models/buildings/tiles/door-rotate-square-b.obj" id="9_nex80"]
[ext_resource type="ArrayMesh" uid="uid://bngs1g03fh6e6" path="res://TestAssets/human.obj" id="12_drsy4"]
[ext_resource type="AudioStream" uid="uid://o2wvoy8m8dey" path="res://environments/sfx/door.tres" id="14_cwuud"]
[ext_resource type="PackedScene" uid="uid://x3reh6m2ri7w" path="res://environments/buildings/bar_minigame/draught.tscn" id="14_k3s7o"]
[ext_resource type="PackedScene" uid="uid://hu4ooesjtds7" path="res://environments/buildings/bar_minigame/clean_glasses.tscn" id="15_cx3t3"]
[ext_resource type="PackedScene" uid="uid://et0efohon80k" path="res://environments/buildings/bar_minigame/serve.tscn" id="16_ohaok"]
[ext_resource type="PackedScene" uid="uid://k8hey65ag30s" path="res://environments/buildings/bar_minigame/dirty_glasses.tscn" id="17_pf8mh"]
[ext_resource type="PackedScene" uid="uid://djdpv4d4i78ru" path="res://environments/buildings/bar_minigame/glass_washer.tscn" id="18_eeab3"]
[ext_resource type="Shader" uid="uid://bh0mmbcbcmadx" path="res://environments/shaders/sky_box_shader.gdshader" id="18_eta5j"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_yd747"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7s4xu"]
resource_name = "colormap"
vertex_color_is_srgb = true
albedo_texture = ExtResource("5_upnxa")

[sub_resource type="ArrayMesh" id="ArrayMesh_68nw3"]
_surfaces = [{
"aabb": AABB(-0.05, 0, -1, 0.1, 2.4, 2),
"format": 34359742465,
"index_count": 30,
"index_data": PackedByteArray("AAABAAIAAgADAAAAAwACAAQAAQAAAAUABgAAAAMABAAGAAMAAAAGAAUABgABAAUABgAEAAcAAQAGAAcA"),
"name": "colormap",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("x8xMvZqZGUAAAIC/0sxMvUHNzDAAAIA/0sxMvUHNzDAAAIC/0sxMPZqZGUAAAIC/x8xMPQAAAAAAAIC/x8xMvZqZGUAAAIA/0sxMPZqZGUAAAIA/x8xMPQAAAAAAAIA/")
}, {
"aabb": AABB(-0.05, 0, -1, 0.1, 2.4, 2),
"format": 34359742465,
"index_count": 30,
"index_data": PackedByteArray("AAABAAIAAgADAAAAAwACAAQAAQAAAAUABgAAAAMABAAGAAMAAAAGAAUABgABAAUABgAEAAcAAQAGAAcA"),
"name": "colormap",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("x8xMvZqZGUAAAIC/0sxMvUHNzDAAAIA/0sxMvUHNzDAAAIC/0sxMPZqZGUAAAIC/x8xMPQAAAAAAAIC/x8xMvZqZGUAAAIA/0sxMPZqZGUAAAIA/x8xMPQAAAAAAAIA/")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_jum3o"]
_surfaces = [{
"aabb": AABB(-0.05, 0, -1, 0.1, 2.4, 2),
"attribute_data": PackedByteArray("/////wAAGD8zM1M//////wAAGD/NzGw//////wAAGD/NzGw//////wAAGD8zM1M//////wAAGD/NzGw//////wAAGD8zM1M//////wAAGD/NzGw//////wAAGD8zM1M//////wAAGD8zM1M//////wAAGD/NzGw//////wAAGD/NzGw//////wAAGD8zM1M//////wAA8D4zM1M//////wAA8D4zM1M//////wAA8D4zM1M//////wAA8D4zM1M//////wAAsD7NzGw//////wAAsD4zM1M//////wAAsD4zM1M//////wAAsD7NzGw/"),
"format": 34359742495,
"index_count": 30,
"index_data": PackedByteArray("AAABAAIAAQAAAAMABAAFAAYABQAEAAcACAAJAAoACQAIAAsADAANAA4ADQAMAA8AEAARABIAEQAQABMA"),
"material": SubResource("StandardMaterial3D_7s4xu"),
"name": "colormap",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 20,
"vertex_data": PackedByteArray("x8xMvZqZGUAAAIC/0sxMvUHNzDAAAIA/0sxMvUHNzDAAAIC/x8xMvZqZGUAAAIA/0sxMvUHNzDAAAIA/0sxMPZqZGUAAAIA/x8xMPQAAAAAAAIA/x8xMvZqZGUAAAIA/0sxMPZqZGUAAAIC/0sxMvUHNzDAAAIC/x8xMPQAAAAAAAIC/x8xMvZqZGUAAAIC/0sxMPZqZGUAAAIA/x8xMvZqZGUAAAIC/0sxMPZqZGUAAAIC/x8xMvZqZGUAAAIA/x8xMPQAAAAAAAIC/0sxMPZqZGUAAAIA/0sxMPZqZGUAAAIC/x8xMPQAAAAAAAIA/AAD/f////78AAP9/////vwAA/3////+/AAD/f////7//f/9/////P/9//3////8//3//f////z//f/9/////P/////////+//////////7//////////v/////////+//3///////7//f///////v/9///////+//3///////7////9/////v////3////+/////f////7////9/////vw==")
}, {
"aabb": AABB(-0.05, 0, -1, 0.1, 2.4, 2),
"attribute_data": PackedByteArray("/////wAAGD8zM1M//////wAAGD/NzGw//////wAAGD/NzGw//////wAAGD8zM1M//////wAAGD/NzGw//////wAAGD8zM1M//////wAAGD/NzGw//////wAAGD8zM1M//////wAAGD8zM1M//////wAAGD/NzGw//////wAAGD/NzGw//////wAAGD8zM1M//////wAA8D4zM1M//////wAA8D4zM1M//////wAA8D4zM1M//////wAA8D4zM1M//////wAAsD7NzGw//////wAAsD4zM1M//////wAAsD4zM1M//////wAAsD7NzGw/"),
"format": 34359742495,
"index_count": 30,
"index_data": PackedByteArray("AAABAAIAAQAAAAMABAAFAAYABQAEAAcACAAJAAoACQAIAAsADAANAA4ADQAMAA8AEAARABIAEQAQABMA"),
"material": SubResource("StandardMaterial3D_7s4xu"),
"name": "colormap",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 20,
"vertex_data": PackedByteArray("x8xMvZqZGUAAAIC/0sxMvUHNzDAAAIA/0sxMvUHNzDAAAIC/x8xMvZqZGUAAAIA/0sxMvUHNzDAAAIA/0sxMPZqZGUAAAIA/x8xMPQAAAAAAAIA/x8xMvZqZGUAAAIA/0sxMPZqZGUAAAIC/0sxMvUHNzDAAAIC/x8xMPQAAAAAAAIC/x8xMvZqZGUAAAIC/0sxMPZqZGUAAAIA/x8xMvZqZGUAAAIC/0sxMPZqZGUAAAIC/x8xMvZqZGUAAAIA/x8xMPQAAAAAAAIC/0sxMPZqZGUAAAIA/0sxMPZqZGUAAAIC/x8xMPQAAAAAAAIA/AAD/f////78AAP9/////vwAA/3////+/AAD/f////7//f/9/////P/9//3////8//3//f////z//f/9/////P/////////+//////////7//////////v/////////+//3///////7//f///////v/9///////+//3///////7////9/////v////3////+/////f////7////9/////vw==")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_68nw3")

[sub_resource type="BoxShape3D" id="BoxShape3D_oxhh7"]
size = Vector3(0.2, 4, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_jum3o"]
size = Vector3(0.2, 4, 20)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jum3o"]
shading_mode = 0
vertex_color_use_as_albedo = true
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
grow = true

[sub_resource type="Gradient" id="Gradient_lbcwl"]
offsets = PackedFloat32Array(0, 0.480211, 0.952507)
colors = PackedColorArray(0.67473, 0.564777, 0.109466, 1, 0.90987, 0.397799, 7.70092e-07, 1, 0.605674, 1.31156e-06, 2.88785e-07, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_b1nr2"]
gradient = SubResource("Gradient_lbcwl")

[sub_resource type="Curve" id="Curve_8s0x0"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.568311), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_68nw3"]
curve = SubResource("Curve_8s0x0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_l6hdd"]
emission_shape = 3
emission_box_extents = Vector3(0.25, 0.2, 0.25)
gravity = Vector3(0, 2, 0)
scale_min = 0.1
scale_max = 0.25
scale_curve = SubResource("CurveTexture_68nw3")
color_ramp = SubResource("GradientTexture1D_b1nr2")

[sub_resource type="QuadMesh" id="QuadMesh_conbi"]

[sub_resource type="BoxShape3D" id="BoxShape3D_lbcwl"]
size = Vector3(1, 4, 1)

[sub_resource type="BoxMesh" id="BoxMesh_oxhh7"]
flip_faces = true

[sub_resource type="BoxMesh" id="BoxMesh_jum3o"]
size = Vector3(1, 1, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_b1nr2"]
size = Vector3(4.38525, 3, 1.26465)

[sub_resource type="BoxShape3D" id="BoxShape3D_68nw3"]
size = Vector3(1.23828, 1.12134, 2.39838)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_68nw3"]
shader = ExtResource("18_eta5j")
shader_parameter/sky_color = Color(0.03, 0.05, 0.11, 1)
shader_parameter/star_base_color = Color(0.8, 1, 0.3, 1)
shader_parameter/star_hue_offset = 0.6
shader_parameter/star_intensity = 0.08
shader_parameter/star_twinkle_speed = 0.8
shader_parameter/star_twinkle_intensity = 0.2
shader_parameter/layer_scale = 20.0
shader_parameter/layer_scale_step = 10.0
shader_parameter/layers_count = 3

[sub_resource type="Sky" id="Sky_l6hdd"]
sky_material = SubResource("ShaderMaterial_68nw3")

[sub_resource type="Environment" id="Environment_yd747"]
background_mode = 2
background_color = Color(0.762404, 0.762404, 0.762403, 1)
sky = SubResource("Sky_l6hdd")
ambient_light_source = 2

[sub_resource type="BoxShape3D" id="BoxShape3D_mu04h"]
size = Vector3(1, 2, 1)

[node name="Bar" type="Node3D"]
script = ExtResource("1_mu04h")

[node name="Room" type="Node3D" parent="."]

[node name="Floor" type="StaticBody3D" parent="Room"]

[node name="Floor" type="MeshInstance3D" parent="Room/Floor"]
transform = Transform3D(5, 0, 0, 0, 2, 0, 0, 0, 10, -0.00727177, -0.188635, -0.0014596)
mesh = ExtResource("1_rkyfd")
skeleton = NodePath("../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/Floor"]
shape = SubResource("WorldBoundaryShape3D_yd747")

[node name="Bar" type="Node3D" parent="Room"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1, 0, 4)
metadata/_edit_group_ = true

[node name="Structure" type="MeshInstance3D" parent="Room/Bar"]
transform = Transform3D(0.75, 0, 0, 0, 0.6, 0, 0, 0, 3, -0.419413, 0, -2.17055)
mesh = ExtResource("2_ufdfm")
skeleton = NodePath("../..")

[node name="Corner" type="MeshInstance3D" parent="Room/Bar"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 1.05726)
mesh = ExtResource("3_cuqvx")
skeleton = NodePath("../../..")

[node name="Wall" type="MeshInstance3D" parent="Room/Bar"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 3.9, 0.471719, 0, -2.35002)
mesh = ExtResource("4_ks6fs")
skeleton = NodePath("../../..")

[node name="Wall2" type="MeshInstance3D" parent="Room/Bar"]
transform = Transform3D(-2.18557e-08, 0, -0.8, 0, 0.5, 0, 0.5, 0, -3.49691e-08, -0.602053, 0, 1.53172)
mesh = ExtResource("4_ks6fs")
skeleton = NodePath("../../..")

[node name="Walls" type="StaticBody3D" parent="Room"]

[node name="Wall2" type="MeshInstance3D" parent="Room/Walls"]
transform = Transform3D(-2.18557e-08, 0, 5, 0, 1.5, 0, -0.5, 0, -2.18557e-07, 0, 0, 10)
mesh = SubResource("ArrayMesh_jum3o")
skeleton = NodePath("../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/Walls"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 2, 10)
shape = SubResource("BoxShape3D_oxhh7")

[node name="Wall3" type="MeshInstance3D" parent="Room/Walls"]
transform = Transform3D(-2.18557e-08, 0, 5, 0, 1.5, 0, -0.5, 0, -2.18557e-07, 0, 0, -10)
mesh = SubResource("ArrayMesh_jum3o")
skeleton = NodePath("../../..")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Room/Walls"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 2, -10)
shape = SubResource("BoxShape3D_oxhh7")

[node name="Wall4" type="MeshInstance3D" parent="Room/Walls"]
transform = Transform3D(-0.5, 0, -1.50996e-06, 0, 1.5, 0, 7.54979e-08, 0, -10, -5, 0, 0)
mesh = SubResource("ArrayMesh_jum3o")
skeleton = NodePath("../../..")

[node name="Wall5" type="MeshInstance3D" parent="Room/Walls"]
transform = Transform3D(-0.5, 0, -1.50996e-06, 0, 1.5, 0, 7.54979e-08, 0, -10, 5, 0, 0)
mesh = SubResource("ArrayMesh_jum3o")
skeleton = NodePath("../../..")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Room/Walls"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -5, 2, 0)
shape = SubResource("BoxShape3D_jum3o")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Room/Walls"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 5, 2, 0)
shape = SubResource("BoxShape3D_jum3o")

[node name="FirePlace" type="StaticBody3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.77827, 0, 1)

[node name="LogStackLarge" type="MeshInstance3D" parent="Room/FirePlace"]
mesh = ExtResource("6_dxs0i")
skeleton = NodePath("../../..")

[node name="GPUParticles3D" type="GPUParticles3D" parent="Room/FirePlace/LogStackLarge"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.244144, 0)
material_override = SubResource("StandardMaterial3D_jum3o")
amount = 16
process_material = SubResource("ParticleProcessMaterial_l6hdd")
draw_pass_1 = SubResource("QuadMesh_conbi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/FirePlace"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("BoxShape3D_lbcwl")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Room/FirePlace"]
transform = Transform3D(0.695, 0, 0, 0, 1, 0, 0, 0, 1, 0.159367, 0.520466, 0)
mesh = SubResource("BoxMesh_oxhh7")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Room/FirePlace"]
transform = Transform3D(0.695, 0, 0, 0, 1, 0, 0, 0, 1, 0.159367, 0.5, 0.45)
mesh = SubResource("BoxMesh_jum3o")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Room/FirePlace"]
transform = Transform3D(0.695, 0, 0, 0, 1, 0, 0, 0, 1, 0.159367, 0.5, -0.45)
mesh = SubResource("BoxMesh_jum3o")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Room/FirePlace"]
transform = Transform3D(0.695, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.159367, 1, 0)
mesh = SubResource("BoxMesh_jum3o")

[node name="Column-thin" type="MeshInstance3D" parent="Room/FirePlace"]
transform = Transform3D(2, 0, 0, 0, 1.1, 0, 0, 0, 2, -0.148793, 1, -0.00267422)
mesh = ExtResource("7_0nbum")
skeleton = NodePath("../../..")

[node name="Shelf" type="StaticBody3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/Shelf"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.30737, 1, 0.867676)
shape = SubResource("BoxShape3D_b1nr2")

[node name="Barrel" type="MeshInstance3D" parent="Room/Shelf"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2.87069, 1.3233, 0.610462)
mesh = ExtResource("8_8e5y5")
skeleton = NodePath("../../..")

[node name="Barrel2" type="MeshInstance3D" parent="Room/Shelf"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.87069, 1.3233, 0.610462)
mesh = ExtResource("8_8e5y5")
skeleton = NodePath("../../..")

[node name="Barrel3" type="MeshInstance3D" parent="Room/Shelf"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.870688, 1.3233, 0.610462)
mesh = ExtResource("8_8e5y5")
skeleton = NodePath("../../..")

[node name="Barrel4" type="MeshInstance3D" parent="Room/Shelf"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.129312, 1.3233, 0.610462)
mesh = ExtResource("8_8e5y5")
skeleton = NodePath("../../..")

[node name="Structure" type="MeshInstance3D" parent="Room/Shelf"]
transform = Transform3D(-3.27835e-08, 0, 1.86, 0, 0.6, 0, -0.75, 0, -8.13032e-08, 1.25986, 0, 1.20387)
mesh = ExtResource("2_ufdfm")
skeleton = NodePath("../..")

[node name="CoveDoor" type="MeshInstance3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.94537, 0, -0.390159)
mesh = ExtResource("9_nex80")
skeleton = NodePath("../..")

[node name="DoorSFX" type="AudioStreamPlayer3D" parent="Room/CoveDoor"]
stream = ExtResource("14_cwuud")
bus = &"SFX"

[node name="Table" type="StaticBody3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, -5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/Table"]
shape = SubResource("BoxShape3D_68nw3")

[node name="Table" type="MeshInstance3D" parent="Room/Table"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 0, 0)
mesh = ExtResource("2_ufdfm")
skeleton = NodePath("../../..")

[node name="Table3" type="StaticBody3D" parent="Room"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2, 0, -5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/Table3"]
shape = SubResource("BoxShape3D_68nw3")

[node name="Table" type="MeshInstance3D" parent="Room/Table3"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 0, 0)
mesh = ExtResource("2_ufdfm")
skeleton = NodePath("../../..")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_yd747")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment"]
transform = Transform3D(0.866025, -0.25, 0.433013, -0.5, -0.433013, 0.75, 1.49012e-08, -0.866025, -0.5, 0, 0, 0)

[node name="OverviewCam" type="Camera3D" parent="."]
transform = Transform3D(-0.210448, -0.479878, 0.851721, 0, 0.871232, 0.490871, -0.977605, 0.103303, -0.183349, 5.10413, 4.49761, 3.22106)

[node name="BarPlayer" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.31969, 0, 7.5935)

[node name="PlayerBarCam" type="Camera3D" parent="BarPlayer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.74488, 0)

[node name="PlayerModel" type="MeshInstance3D" parent="BarPlayer"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
mesh = ExtResource("12_drsy4")
skeleton = NodePath("../..")

[node name="SelectPlayer" type="Area3D" parent="BarPlayer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000227928, 1, 0.00933647)

[node name="CollisionShape3D" type="CollisionShape3D" parent="BarPlayer/SelectPlayer"]
shape = SubResource("BoxShape3D_mu04h")

[node name="DraughtA" parent="." instance=ExtResource("14_k3s7o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1.59494, 4.41955)

[node name="CleanGlasses" parent="." instance=ExtResource("15_cx3t3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.657785, 0.619907, 5)

[node name="Serve" parent="." groups=["bm_item"] instance=ExtResource("16_ohaok")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.08588, 1.33431, 4.12496)

[node name="DirtyGlasses" parent="." instance=ExtResource("17_pf8mh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.00122, 1.33708, 4.78952)

[node name="GlassWasher" parent="." instance=ExtResource("18_eeab3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.91073, 0.57098, 4.84292)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.471817, 1.36447, 7.88734)

[connection signal="input_event" from="BarPlayer/SelectPlayer" to="." method="_on_select_player_input_event"]
[connection signal="glass_served" from="Serve" to="DirtyGlasses" method="add_glass"]
